--- a/notebooks/Importer.ipynb
+++ b/notebooks/Importer.ipynb
@@ -100,11 +100,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "902f79d9ad772a74e093918cd238b73d3a66752a1294615df56dc1ae990c412f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('.venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -118,9 +115,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "523fa899018d941621c758d5bb3049c27ad356077e18f64f44b110dd47b728b5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
