--- a/notebooks/Backtesting Scratch.ipynb
+++ b/notebooks/Backtesting Scratch.ipynb
@@ -256,11 +256,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "aa3dbe2f4a7f0678730f7d2c97c05ccbfd8da2f1817c495859159b7373ffd19e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('.venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -274,9 +271,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "523fa899018d941621c758d5bb3049c27ad356077e18f64f44b110dd47b728b5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
